# opt-py-cpp

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  quad.rst  simpleopt.opt.rst  simpleopt.rst
simpleopt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src-cpp/: CMakeLists.txt  funcs.cpp  funcs.h  library.cpp  main  main.cpp  quad_function.cpp  quad_function.hpp
src-cpp/.cmake/api/v1/reply/: index-2023-04-12T16-06-34-0667.json
src-cpp/bind/: CMakeLists.txt  bindings.cpp  simplebindings.cpp
src-cpp/include/: quad_function.hpp  simple_class.hpp
src-cpp/src/: CMakeLists.txt  main.cpp  quad_function.cpp  simple_class.cpp
src-cpp/tests/: CMakeLists.txt  CTestTestfile.cmake  quad_function_test.cpp  test_quad_function.cpp
src-py/: opt.py  quad_func.py
src-py/tests/: test_opt.py  test_quad.py
src/cpp/: CMakeLists.txt
src/cpp/bind/: CMakeLists.txt  bindings.cpp
src/cpp/include/: quad_function.hpp
src/cpp/src/: CMakeLists.txt  main.cpp  quad_function.cpp
src/simpleopt/: demo.py  demo_readme.py  opt.py
tests/: test_integration.py  test_opt.py  test_quad.py
tests/.hypothesis/examples/00b9c7970d62549d/: 00303b0664f3ae4a  029114bdfc654845  02c3e3271d90b205  02c7f41b29958cde  036e753a834fc5b0  0377b739aac74336  05b7a3f932e6d08b  06de153c82877a25  073cfc073d6dd83f  07b1ee851604809b  085b49ea4167118b  08a4e433906cfe46  096aec7e89197bcf  0a258c2a85b6d92f  0b5efea68969b202  0c15bc3387a6de35  0cb0bb2844bde396  0de338781653e5ce  0e06b9edc0932a09  0f0df1b19d6ef5ed  0f3b53fb38a73a92  0f629b697df64f55  0f86013898e1b875  10dc666db6aaefcc  10f7275d5339c125  10fa3c00781ba589  110ffb2a02bbb749  11295c380c124bec  113a2cf357a37beb  1156505a6290a9b9  11713b9df342994f  120ddbc95bb81e93  13a42a1880727463  13b769a1943e352c  1524ff5a7cd39ee2  15cf979da518be9b  15f22f365601170d  163424bbf31f78ad  16443e1d9ca5740b  16cebf0829372e18  (+329 more)
tests/.hypothesis/examples/04080c255f9a1214/: fa798f7367476f4e
tests/.hypothesis/examples/0eba8eda6305cc51/: 02370613ecf9dd18  070be31f47c31c1f  0ca253653600d741  0cad6dddfcdc954b  11bce2fb2d741cee  15f8ab1e284284f8  2001717231aac241  2137702aa235dc88  28871f1c3d7fa829  2c40b0067907044b  2ceac678b1267374  32b21ccb611e5356  342f2854f1d28c27  42cc8034fc744bdf  4a46a1a344928362  618c24e4eccd4e11  746989d4565a8865  74a0c9d32c449665  74f0251f6504682e  80bf98666834f92c  8ec7a85f801fa060  92a172a1df970449  939e081b73692743  962b15168a52cb93  9970b22be75d9f8e  a9f79d24832b3230  ae3d92d6dbf424d0  d47f594c717d3d65  dc794625e7c372ec  ddbb12955a956cc7  ec7bf6c1530b8fb6  fda9561b3eb8923a
tests/.hypothesis/examples/1c6ccb18b16dbda3/: 454ab52766dd9fa3
tests/.hypothesis/examples/1fce41f7908f1ffa/: d2fa6273438d983a
tests/.hypothesis/examples/3a48fdaa78dadd4e/: 007d0911f8479356  008e2740efc291b0  040396620a5362b5  055fee8afdfcc0d7  088130e3dae1e746  0b4fb62bab6be769  0bdd17eebddbaa2e  0c998692614561d7  0cb25cda28a69da6  0e6b6628e070db69  0ee82a4bbd62b589  0f98ce46fadb9a03  10528042510525de  1281446f3014c2af  128b7c3f38ab415d  13040a1eb74b8e99  1ab34154baf6ccce  1e40cef66033649e  235eb6bc1b21c5e3  23900f50790a73f0  24fb0eb7757b7e24  251040b56a80eefa  2c72deb952c3e1c0  2d147bf366a13d94  2ea3d01f0ab55285  2f775aedecfd2d38  314b2bfc9924fdca  351abd100c47c81b  36dbae50f5e5db8d  3df7d48624bb0a0a  419400be3ea0cb14  421c4f674d50a0c5  43d9631fcde05375  45d05a0ac2cf1479  4628c96271e94421  46822a8a06871e63  47384f3fc8c1a3a2  47dea07675b2a8b3  47fdda6778e9f2fb  4a15898e8d5ab100  (+95 more)
tests/.hypothesis/examples/7b4e588294da4f55/: 6d7122ddb335cb21
tests/.hypothesis/examples/86ca26f3de18b8c0/: 109d7b9c6d387edb
tests/.hypothesis/examples/8e37b690169c0d87/: d1491dfe874f06d1
tests/.hypothesis/examples/90fa6edca1552573/: e64734559a88c74f
tests/.hypothesis/examples/a8192062686b2042/: 4202bdf916fa8ab3
tests/.hypothesis/examples/f62706bf0a199e8f/: 005c55e80f211bf0  006ee5cd6f047f4d  00fa468c1953ea83  01feaaade941a165  03d927d7daa93254  04bb378a6e341cd4  05c6254b5281f2f3  0669b00d0a096cc5  06e02af1af8b8a4f  07b4e01c9cc6da44  09b80c3b4ccc19f7  0a255b54433831db  0b56c7350fadd563  0b89a6ece28a5e34  0bdd32a610a05624  0c444f9a4f2b8d7c  0e25a42f9b0e8a56  11d4c4f4b3ede871  1221e6efccdb8461  1272fa22e1019384  14c45289986c7350  153e1422c5ea3fde  1580312bb56ef716  158a2eb2511c4743  162efefdba45a40f  1712f20e28ac58e2  17fbc32d12cb2737  18e47dd42b4cae1d  1b110788ab0f5fe3  1c062cc0effc0f57  1ce8b09993fd69a5  1d3a34443c8b3ad0  1d9f81d21423bc8d  1e253cda49f691d5  20fe2753dc13d10d  21479d5089d292a5  221c3d433530c7f1  22246dc9f0ecb95e  241940bd7be1a0fa  24a8c544690505cf  (+178 more)
tests/.hypothesis/examples/fff7813945b0ccfd/: 5d68aadd332e4f16
